08-Ingress/04-ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  entryPoints: 
    - web
  routes:
  - match: Host(`traefik-kube`)
    kind: Rule
    services:
    - name: nginx
      port: 80
